# paper_1

./: .gitignore  Makefile  README.md  pareto_front_comparison.ipynb  pyproject.toml
examples/: NSGA2.ipynb  NSGA2_LLM.ipynb  lhs_icc_sampling.ipynb  pareto_front_comparison.ipynb
examples/data/: blocks_agg_with_indicators.geojson  catboost_land_value_no_services.cbm  no_llm_optimization_log.jsonl  no_llm_pareto_front.jsonl  no_llm_pareto_front_scored.jsonl  optimization_log.jsonl  pareto_front.jsonl
examples/nsga_2_without_llm/: no_llm_optimization_log_33.jsonl  no_llm_optimization_log_39.jsonl  no_llm_optimization_log_40.jsonl  no_llm_pareto_front_33.jsonl  no_llm_pareto_front_34.jsonl  no_llm_pareto_front_35.jsonl  no_llm_pareto_front_39.jsonl  no_llm_pareto_front_40.jsonl
nsga_2_without_llm/: no_llm_optimization_log_34.jsonl  no_llm_optimization_log_35.jsonl  no_llm_optimization_log_36.jsonl  no_llm_optimization_log_37.jsonl  no_llm_pareto_front_36.jsonl  no_llm_pareto_front_37.jsonl
src/urbanomy/: __init__.py
src/urbanomy/methods/: __init__.py
src/urbanomy/methods/agent/: __init__.py  agent.py  config.py  llms.py
src/urbanomy/methods/investment_potential/: __init__.py  constants.py  investment_metrics.py  land_use_score.py  utils_metrics.py
src/urbanomy/methods/land_value_modeling/: __init__.py  constants.py  ga_mc_optimizer.py  land_data_preparation.py  land_price_estimation.py  land_price_visualization.py  pareto_front_dataframe.py  pareto_llm_selector.py  (+2 more)
src/urbanomy/utils/: investment_input.py
tests/: test_strategic_alignment_scorer.py
(+4 files in other folders)
